ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncInterface_es6/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncInterface_es6/input.ts:3:7
  |
3 | async interface I {  
  |       ^^^^^^^^^

error: Expected =>, got I
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncInterface_es6/input.ts:3:17
  |
3 | async interface I {  
  |                 ^

